2006-06-27  Sergey Udaltsov <svu@gnome.org>

	* Makefile.am: redundant GNOMELOCALEDIR removed. Patch from #345178
	applied.
	
2006-01-14  Alan Swanson <swanson@ukfsn.org>

	* applier.c (get_geometry): Handle the new WPTYPE_ZOOM setting and
	return proper geometry for it

	* preferences.c (_bg_wptype_values[]): Add the alias for the zoom type
	(read_wptype_from_string): Handle setting the type for zoom
	(bg_preferences_get_wptype_as_string): Return the string for the new
	zoom setting type

	* preferences.h (_wallpaper_type_t): Add the new zoom type

	Partial code for #105231
	
2005-11-07  Alexis Robert <alexis@linuxcode.eu.org>

	Fixes #320647

	* libbackground/preferences.c (bg_preferences_load): only use strings
	returned from GConf when not NULL.

2005-10-01  Rodney Dawes  <dobey@novell.com>

	* preferences.c (bg_preferences_load, bg_preferences_merge_entry):
	Make sure that the UTF8 filename is valid and exists before trying
	to use it, otherwise fall back to using the filename encoding specified
	by the user with the environment variables used by glib to determine
	the locale encoding of filenames

	Fixes #168604

2005-06-10  Kjartan Maraas  <kmaraas@gnome.org>

	* applier.c: (render_wallpaper), (is_nautilus_running): GCC4
	build issues.

2005-05-08  Richard Hoelscher  <rah@rahga.com>

	* applier.c (refresh_render): Remove egg_pixbuf_new_from_file_at_size,
	using the gtk+-2.6 function for this instead.

	Fixes #169757

2005-02-10  Rodney Dawes  <dobey@novell.com>

	* Makefile.am: Don't define GNOME_ICONDIR as libbackground does not
	use it in any of the code

2004-10-14  Jody Goldberg <jody@gnome.org>

	* Release 2.8.1

2004-06-27  Rodney Dawes  <dobey@novell.com>

	* applier.c: Remove all references to #ifdef HAVE_GTK_MULTIHEAD
	Patch from Kjartan Maraas <kmaraas@gnome.org>

	Fixes #142749

2004-04-15  Jody Goldberg <jody@gnome.org>

	* Release 2.6.1

2004-03-12  Chris Lahey  <clahey@rigger.boston.ximian.com>
