@@ -1,3 +1,7 @@
+2006-08-21  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* preferences.c: (bg_preferences_load): Don't leak gconf strings.
+
 2006-06-27  Sergey Udaltsov <svu@gnome.org>
 
 	* Makefile.am: redundant GNOMELOCALEDIR removed. Patch from #345178
